--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
   "bugs": {
     "url": "https://github.com/Hzy0913/eslint-plugin-fly/issues"
   },
-  "dependencies": {},
+  "scripts": {
+    "start": "build2webpack-start"
+  },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "mocha": "^5.1.1",
-    "standard": "*"
+    "build2webpack": "^1.1.1",
+    "@hot-loader/react-dom": "^16.10.2",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-fly": "^0.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2"
   },
   "homepage": "https://github.com/Hzy0913/eslint-plugin-fly#readme",
   "keywords": [
